Add nbviewer link

--- a/Git Starter.ipynb
+++ b/Git Starter.ipynb
@@ -12,6 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "nbviewer refers to [nbviewer](https://nbviewer.jupyter.org/github/Hiiiua/Udacity_DA/blob/master/Git%20Starter.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2初次使用\n",
     "### 初次配置\n",
     ">`git config --global user.name \"John Doe\"`<br/>\n",
