Hyperlink of wrangle report as internal link added

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -3878,8 +3878,8 @@
    "metadata": {},
    "source": [
     ">**Tidiness**\n",
-    ">* **id** column in `retweet_fav_df_clean` table should be changed to **tweet_id**\n",
-    ">* `retweet_fav_df_clean` table should be a part of `tweeter_arvhiver_df_clean` table"
+    ">*  Column **id** in `retweet_fav_df_clean` table is not a consistent column name\n",
+    ">*  `retweet_fav_df_clean` table should be a part of `tweeter_arvhiver_df_clean` table"
    ]
   },
   {
@@ -3889,11 +3889,11 @@
     ">**Quality**\n",
     ">>* Rating denominators not in 10 scale\n",
     ">>* Rating numerators has the largest value of 1776\n",
-    ">>* Names start with lower case\n",
-    ">>* Timestamp with '+0000'\n",
-    ">>* 'A', 'a' and 'none' in dog column\n",
-    ">>* tweet_id are type int\n",
+    ">>* Some names are starting with lower case\n",
     ">>* Some breeds in p1, p2, p3 started with lower case, others started with upper case.\n",
+    ">>* Timestamp with '+0000'\n",
+    ">>* 'A', 'a', 'the' and 'none' in dog column\n",
+    ">>* tweet_id are type int\n",
     ">>* Dog stages are stored in four columns"
    ]
   },
@@ -4429,7 +4429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Some breeds are starting with lower case"
+    "#### Some breeds in p1, p2, p3 started with lower case, others started with upper case."
    ]
   },
   {
@@ -4814,7 +4814,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 'doggo', 'floofer',  'pupper', 'puppo' are all dog stages"
+    "#### Dog stages are stored in four columns"
    ]
   },
   {
@@ -5047,7 +5047,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### What is the most common dog name"
+    "##### What is the most popular dog name"
    ]
   },
   {
@@ -5085,7 +5085,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Is 'retweet_count' and 'favorite_count' independent of each other "
+    "##### Are 'retweet_count' and 'favorite_count' independent of each other "
    ]
   },
   {
@@ -5195,8 +5195,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### What is the mean value for **rating_numerator**?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.792869269949065"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "archive_combo_clean['rating_numerator'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The mean value for rating_numerator is 10.79, which is larger than full marks of 10."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What is wrongly prediction percentage in prediction? (In p1, the predicted value is not even a dog breed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2616867469879518"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "proportion = image_prediction_df_clean[image_prediction_df_clean['p1_dog']==False]['p1_dog'].count()/image_prediction_df_clean['p1_dog'].count()\n",
+    "proportion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The proportion of wrong prediction is at lease 26%."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='report'></a>\n",
     "## Report Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Wrangle_Report](./wrangle_report.ipynb)"
    ]
   }
  ],
