Wrangle report completed

--- a/wrangle_report.ipynb
+++ b/wrangle_report.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='intro'></a>\n",
+    "<a id='Tidiness'></a>\n",
     "## Tidiness"
    ]
   },
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='intro'></a>\n",
+    "<a id='quality'></a>\n",
     "## Quality"
    ]
   },
