--- a/Project Template/slide_deck_fordgobike.ipynb
+++ b/Project Template/slide_deck_fordgobike.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -377,8 +377,8 @@
     "all_18 = fordgobike_18.shape[0]\n",
     "all_19 = fordgobike_19.shape[0]\n",
     "\n",
-    "out_1 = out_18 + out_19\n",
-    "short_ = all_18 + all_19 - out_\n",
+    "out_1 = out_18_1 + out_19_1\n",
+    "short_ = all_18 + all_19 - out_1\n",
     "\n",
     "out_05 = out_18_05 + out_19_05\n",
     "short_05 = all_18 + all_19 - out_05 \n",
